--- a/解题方法论.md
+++ b/解题方法论.md
@@ -39,36 +39,7 @@ class Solution:
 
 ### 1. 前缀和    区间和
 
-### 2. 滑动窗口❓
-
-#### 滑动窗口三步骤
-
-- 什么时候应该扩大窗口？
-- 什么时候应该缩小窗口？
-- 什么时候应该更新答案？
-
-#### [代码模板](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E5%9B%9B%E3%80%81%E6%9C%80%E9%95%BF%E6%97%A0%E9%87%8D%E5%A4%8D%E5%AD%90%E4%B8%B2)
-
-```python
-left，right = 0, 0 # 左闭右开
-windows=xxx # 无重复字符用set()   统计字符频率用Counter字典
-while right<len(s):
-  	# 1. 加入窗口，同时右移右指针
-    windows.add(s[right]) 
-    right+=1
-    # 2. 进行窗口内数据的一系列更新
-    xxx
-    
-    # 3. 判断左侧窗口是否要收缩
-    while left<right and check(xxx):
-        # 4. 左侧窗口移出元素，同时左指针右移
-        windows.remove(s[left])
-        left+=1
-        # 进行窗口内数据的一系列更新
-        xxx
-```
-
-### 3. 查找算法
+### 2. 查找算法
 
 #### 二分查找
 
@@ -88,7 +59,7 @@ def binary_search(nums, target):
     return -1
 ```
 
-### 4. 排序算法
+### 3. 排序算法
 
 #### 快速排序QuickSort
 
@@ -130,11 +101,9 @@ def quicksort(nums, left, right):
     quicksort(nums, i + 1, right)  # 右区间排序
 ```
 
-#### 堆排序❓
+#### 堆排序
 
-https://www.hello-algo.com/chapter_heap/heap/#3
-
-
+[核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)
 
 ```python
 def findKthLargest(nums, k):
@@ -178,6 +147,60 @@ k = 2
 print(findKthLargest(nums, k))  # 输出应该是5，因为5是第二大的元素
 
 ```
+
+### 4. 滑动窗口
+
+#### 滑动窗口三步骤
+
+- 什么时候扩大窗口？
+- 什么时候缩小窗口？
+- 什么时候更新答案？
+
+```python
+# 最小覆盖子串
+def minWindow(self, s: str, t: str) -> str:
+    
+    # 窗口参数
+    window = {} # 无重复字符用Set()   统计字符频率用Counter
+   	valid=0 # 单字符满足频次时+1   值等于need长度时满足条件
+  	left，right, = 0,0 # 左闭右开[left,right)   区间[0, 0)中没有元素，避免边界问题  
+    
+    # 待匹配字符的频次
+    from collections import Counter
+    need=Counter(t) # "eex" --> Counter({'e': 2, 'x': 1})
+
+    # 记录结果  最小覆盖子串的起始索引及长度
+    strat=0
+    length=float("inf")
+   
+    while right<len(s):  # right是待处理的索引，取值范围是0~n-1    此时窗口内范围是left~right-1
+        # 1. 扩大窗口
+        right+=1
+        char=s[right]
+        # 2. 判断窗口是否需要添加当前元素
+        if char in need.keys():
+            window[char] = window.get(char, 0) + 1
+            if window[char] == need[char]:
+                 valid += 1 # 满足一个字符的出现频次后加1
+
+        # 3. 判断左侧窗口是否收缩
+        # while right-left >= len(t): # 固定窗口
+        while left<right and valid==len(need): # 动态窗口
+            # 记录结果
+            if right-left<length:
+              	start=left
+                length=right-left
+            # 5. 收缩窗口，同时判断是否移出元素
+            left+=1
+            char = s[left]
+            if char in need.keys():
+              	if window[char] == need[char]:
+                    valid-=1
+                window[char]-=1
+		return "" if length==float("inf") else s[start: start + length]
+```
+
+[links](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E6%BB%91%E5%8A%A8%E7%AA%97%E5%8F%A3%E6%A1%86%E6%9E%B6%E6%A6%82%E8%A7%88)
 
 ### 5. 单调栈❓
 
