--- a/高频题.md
+++ b/高频题.md
@@ -76,9 +76,48 @@ class Solution:
 
 ### 3. 数组中的第K个最大元素
 
-思路：快排取K    堆排序   
+堆排序
 
 ```python
+def findKthLargest(nums, k):
+    """
+    找到数组中第K个最大的元素。
+    
+    :param nums: 一个整数数组
+    :param k: 要找的第K个最大元素的位置
+    :return: 第K个最大的元素
+    """
+    # 构建最大堆
+    def build_max_heap(nums):
+        length = len(nums)
+        # 从最后一个非叶子节点开始，向上构建最大堆
+        for i in range(length//2 - 1, -1, -1):
+            max_heapify(nums, length, i)
+    
+    # 调整堆，使其满足最大堆的性质  如果子节点大于父节点，就交换它们，并递归调整子树。
+    def max_heapify(nums, length, i):
+        largest = i
+        left = 2 * i + 1
+        right = 2 * i + 2
+        if left < length and nums[largest] < nums[left]:
+            largest = left
+        if right < length and nums[largest] < nums[right]:
+            largest = right
+        if largest != i:
+            nums[i], nums[largest] = nums[largest], nums[i]
+            max_heapify(nums, length, largest)
+    
+    build_max_heap(nums) # 构建最大堆
+    for i in range(k - 1):
+        nums[0], nums[-1] = nums[-1], nums[0]  # 交换堆顶和最后一个元素
+        length = len(nums) - 1  # 减少堆的大小
+        max_heapify(nums, length, 0)  # 重新调整堆
+    return nums[0]  # 返回堆顶元素，即第K个最大的元素
+
+# 示例
+nums = [3,2,1,5,6,4]
+k = 2
+print(findKthLargest(nums, k))  # 输出应该是5，因为5是第二大的元素
 
 ```
 
@@ -179,8 +218,8 @@ class Solution:
         
         long_str=""
         for i in range(len(s)):
-            odd_str= expand(i,i,s)
-            even_str=expand(i,i+1,s)
+            odd_str= expand(i,i,s)  # 以 s[i] 为中心的最长回文子串
+            even_str=expand(i,i+1,s) # 以 s[i] 和 s[i+1] 为中心的最长回文子串
             long_str = max(long_str,odd_str,even_str,key=len)
         return long_str
 ```
