--- a/解题方法论.md
+++ b/解题方法论.md
@@ -43,21 +43,60 @@ class Solution:
 
 #### 二分查找
 
-时间复杂度O(logn)  
+- 时间复杂度O(logn)  
+- 应用：寻找一个数、寻找左侧边界、寻找右侧边界
 
 ```python
+# 寻找一个数
 def binary_search(nums, target):
     left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
     while left <= right: # 双闭区间左右边界也要判断 需要等号检查最后一个元素
         mid = (left + right) // 2
-        if nums[mid] == target:
-            return mid
-        elif nums[mid] < target:
+        # 不要else 必须所有情况列出来
+        if nums[mid] < target: 
             left = mid + 1  
-        else:
+        elif nums[mid] > target:
             right = mid - 1 
+        elif nums[mid] == target:
+            return mid
     return -1
 ```
+
+```python
+# 寻找左侧边界
+def left_bound(nums: List[int], target: int) -> int:
+    left, right = 0, len(nums) - 1 
+    result=-1 
+    while left <= right:
+        mid = left + (right - left) // 2 
+        if nums[mid] < target:
+            left = mid + 1
+        elif nums[mid] > target:
+            right = mid - 1
+        elif nums[mid] == target:
+            result = mid # 记录结果，不断更新结果
+            right = mid - 1 # 寻找左边界，故收缩右边界
+    return result
+```
+
+```python
+# 寻找右侧边界
+def right_bound(nums: List[int], target: int) -> int:
+    left, right = 0, len(nums) - 1 
+    result=-1 
+    while left <= right:
+        mid = left + (right - left) // 2 
+        if nums[mid] < target:
+            left = mid + 1
+        elif nums[mid] > target:
+            right = mid - 1
+        elif nums[mid] == target:
+            result = mid # 记录结果，不断更新结果
+            left = mid + 1 # 寻找右边界，故收缩左边界
+    return result
+```
+
+
 
 ### 3. 排序算法
 
@@ -101,7 +140,7 @@ def quicksort(nums, left, right):
     quicksort(nums, i + 1, right)  # 右区间排序
 ```
 
-#### 堆排序
+#### 堆排序❓
 
 [核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)
 
