--- a/解题方法论.md
+++ b/解题方法论.md
@@ -549,26 +549,27 @@ class Solution:
 
 三步骤
 
-1. 回溯函数模板 参数及返回值
+1. 参数和返回值
 
-   参数：path存放结果，result存放结果集，startIndex下一层for循环搜索的起始位置
+   参数：path存放，result存放结果集
 
-2. 回溯函数终止条件
+2. 终止条件
 
-3. 遍历过程 （思考N叉树，横向遍历什么   纵向遍历什么）
+3. 遍历过程 （**明确**for横向遍历什么   递归纵向遍历什么    path存的什么）
 
 ```python
-def backtracking(result,path,xxx): 
+result=[] # 全局参数，记录结果
+def backtracking(path,startIndex,xxx): 
     if 终止条件:
-        result.append(path[:])  # 存放结果 必须[:]返回新列表
+        result.append(path.copy())  # 存放结果 !必须复制!
         return   #返回
-    for i in range(len(xxx)): #  结尾剪枝
+    for i in range(startIndex,len(xxx)): # 横向遍历的起始位置
         处理当前值
-        backtrack(path,result,xxx)  # 如果有startIndex， i表示可重复  i+1不能重复取
-        撤销当前值
-# 定义全局变量
-result,path=[],[]
-backtracking(result,path,xxx)
+        backtrack(path,i,xxx)  #递归 i控制纵向遍历位置，依赖于横向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
+        撤销当前值  
+path=[]
+startIndex=0 # 横向遍历的起始位置
+backtracking(path,startIndex,xxx)
 return result 
 ```
 
