--- a/解题方法论.md
+++ b/解题方法论.md
@@ -457,6 +457,36 @@ class Solution:
         return result
 ```
 
+## 回溯
+
+### 回溯三步骤
+
+1. 参数和返回值
+
+   参数：path存放，result存放结果集
+
+2. 终止条件
+
+3. 遍历过程 （**明确**for横向遍历什么   递归纵向遍历什么    path存的什么）
+
+```python
+result=[] # 全局参数，记录结果
+def backtracking(path,startIndex,xxx): 
+    if 终止条件:
+        result.append(path.copy())  # 存放结果 !必须复制!
+        return   #返回
+    for i in range(startIndex,len(xxx)): # 横向遍历的起始位置
+        处理当前值
+        backtrack(path,i,xxx)  #递归 i控制纵向遍历位置，依赖于横向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
+        撤销当前值  
+path=[]
+startIndex=0 # 横向遍历的起始位置
+backtracking(path,startIndex,xxx)
+return result 
+```
+
+
+
 ## 图论
 
 ### 1. 深度优先遍历
@@ -545,33 +575,7 @@ class Solution:
         return time - 1 if fresh_nums == 0 else -1
 ```
 
-## 回溯
 
-三步骤
-
-1. 参数和返回值
-
-   参数：path存放，result存放结果集
-
-2. 终止条件
-
-3. 遍历过程 （**明确**for横向遍历什么   递归纵向遍历什么    path存的什么）
-
-```python
-result=[] # 全局参数，记录结果
-def backtracking(path,startIndex,xxx): 
-    if 终止条件:
-        result.append(path.copy())  # 存放结果 !必须复制!
-        return   #返回
-    for i in range(startIndex,len(xxx)): # 横向遍历的起始位置
-        处理当前值
-        backtrack(path,i,xxx)  #递归 i控制纵向遍历位置，依赖于横向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
-        撤销当前值  
-path=[]
-startIndex=0 # 横向遍历的起始位置
-backtracking(path,startIndex,xxx)
-return result 
-```
 
 ## 动态规划
 
