--- a/解题方法论.md
+++ b/解题方法论.md
@@ -459,15 +459,46 @@ class Solution:
 
 ## 回溯
 
-### 回溯三步骤
+### 1. 回溯三步骤
 
-1. 参数和返回值
+1. 参数
 
-   参数：path存放，result存放结果集
+   参数：path存放结果，result存放结果集
+
+   求组合用startIndex，求排列用used
 
 2. 终止条件
 
 3. 遍历过程 （**明确**for横向遍历什么   递归纵向遍历什么    path存的什么）
+
+### 2. 应用
+
+### （1）子集
+
+```python
+# leetcode78 给定数组，返回所有可能的子集
+result = []
+def backtracking(path，nums, startIndex):
+    result.append(path.copy())  # 记录结果，要放在终止条件前面，否则会漏掉自己
+    if startIndex >= len(nums):  # 终止条件可以不加
+        return
+    for i in range(startIndex, len(nums)): # 横向遍历的起始位置
+        path.append(nums[i])
+        self.backtracking(nums, i + 1, path, result) # #递归 i控制纵向遍历位置。i+1不能重复取
+        path.pop()
+path = []
+startIndex=0
+backtracking(path,nums,startIndex)
+return result
+```
+
+[Links](https://www.programmercarl.com/0078.%E5%AD%90%E9%9B%86.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
+
+### （2）分割
+
+### （3）组合
+
+组合无序用startIndex
 
 ```python
 result=[] # 全局参数，记录结果
@@ -483,6 +514,36 @@ path=[]
 startIndex=0 # 横向遍历的起始位置
 backtracking(path,startIndex,xxx)
 return result 
+```
+
+### （4）排列
+
+排列有序  用used
+
+```python
+# leetcode46 全排列
+result=[] # 全局参数存结果
+def backtrack(path,nums,used):
+    # 终止条件
+    if len(path)==len(nums):
+        result.append(path.copy()) # 存放结果 !必须复制!
+        return 
+
+    # 横向纵向
+    for i in range(len(nums)):
+        if used[i]==True:
+            continue  # 直接跳过
+        else:
+            path.append(nums[i])
+            used[i]=True
+            backtrack(path,nums,used) 
+            path.pop()
+            used[i]=False
+
+path=[]
+used=[False] * len(nums) # 求排列有序 跳过已使用过的元素
+backtrack(path,nums,used)
+return result
 ```
 
 
