--- a/解题方法论.md
+++ b/解题方法论.md
@@ -477,26 +477,23 @@ class Solution:
 
 ```python
 # leetcode78 给定数组，返回所有可能的子集
-result = []
-def backtracking(path，nums, startIndex):
-    result.append(path.copy())  # 记录结果，要放在终止条件前面，否则会漏掉自己
-    if startIndex >= len(nums):  # 终止条件可以不加
+result，path = [],[] # 全局参数
+def backtracking(nums,startIndex):
+    result.append(path.copy())  # 记录结果，前序位置每个节点的值都是一个子集
+    if startIndex >= len(nums):  # 终止条件
         return
     for i in range(startIndex, len(nums)): # 横向遍历的起始位置
         path.append(nums[i])
         self.backtracking(nums, i + 1, path, result) # #递归 i控制纵向遍历位置。i+1不能重复取
         path.pop()
-path = []
 startIndex=0
-backtracking(path,nums,startIndex)
+backtracking(nums,startIndex)
 return result
 ```
 
 [Links](https://www.programmercarl.com/0078.%E5%AD%90%E9%9B%86.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
 
-### （2）分割
-
-### （3）组合
+### （2）组合
 
 组合无序用startIndex
 
@@ -516,9 +513,37 @@ backtracking(path,startIndex,xxx)
 return result 
 ```
 
+### （3）切割
+
+- 如何模拟那些切割线？ 类似组合， startIndex代表切割线 
+- 切割问题递归如何终止？ 切完整个字符串终止
+- 在递归循环中如何截取子串？s[startIndex: i+1]代表下标startIndex~i
+- 如何判断回文？ s==s[::-1]
+
+```python
+# 131.分割回文串: 分割成子串，每个子串都是回文串
+result = [] # 全局参数存结果
+def backtracking(path,startIndex,s):
+    # 终止条件
+    if startIndex == len(s):
+        result.append(path.copy()) # 必须复制
+        return
+    for i in range(startIndex, len(s)):
+        if s[startIndex: i+1] == s[startIndex: i + 1][::-1]: # 若反序和正序相同，则是回文串 
+            path.append(s[startIndex:i+1])
+            self.backtracking(s, i+1, path, result) # 纵向 从下一字符切割，判断其余是否仍为回文串
+            path.pop() # 回溯
+path=[]
+startIndex=0 # 切割线
+backtracking(path,startIndex,s)
+return result
+```
+
+[links](https://www.programmercarl.com/0131.%E5%88%86%E5%89%B2%E5%9B%9E%E6%96%87%E4%B8%B2.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
+
 ### （4）排列
 
-排列有序  用used
+排列有序，需要穷举元素的位置  用**used**标记还可以选择哪些元素
 
 ```python
 # leetcode46 全排列
@@ -545,8 +570,6 @@ used=[False] * len(nums) # 求排列有序 跳过已使用过的元素
 backtrack(path,nums,used)
 return result
 ```
-
-
 
 ## 图论
 
@@ -637,6 +660,8 @@ class Solution:
 ```
 
 
+
+## 贪心❓
 
 ## 动态规划
 
