--- a/解题方法论.md
+++ b/解题方法论.md
@@ -2,39 +2,6 @@
 
 
 
-## 字符串
-
-### 1. 字符串解码
-
-&quot;3[a]2[bc]&quot;解码为&quot;aaabcbc"
-
-```python
-class Solution:
-    def decodeString(self, s: str) -> str:
-        stack=[] 
-        cur_str="" # 存储已解码的字符串
-        cur_num=0 # 存储即将解码的数字
-
-        for char in s: # char4种可能
-            if char.isdigit(): # 连续数字
-                cur_num=cur_num*10+int(char)
-            elif char=="[":
-                # 入栈  保存已解码的字符串 + 即将解码的数字
-                stack.append([cur_str,cur_num])
-                # 清空
-                cur_str=""
-                cur_num=0
-            elif char =="]":
-                # 出栈
-                pre_str,nums=stack.pop()
-                cur_str=pre_str+ cur_str*nums # 当前字符串是要重复的目标
-            else:
-                cur_str+=char # 字母
-        return cur_str
-```
-
-
-
 ## 数组
 
 ### 1. 前缀和    区间和
@@ -661,7 +628,10 @@ class Solution:
 
 
 
-## 贪心❓
+## 贪心
+
+1. 无套路，千题千法，故不要在意数学证明。 
+2. 思路：想清楚局部最优，想清楚全局最优，感觉可以推出，且想不出反例
 
 ## 动态规划
 
