--- a/解题方法论.md
+++ b/解题方法论.md
@@ -221,22 +221,25 @@ def minWindow(self, s: str, t: str) -> str:
 
 
 
-### 5. 单调栈❓
+### 5. 单调栈
+
+#### 单调栈三步骤
+
+1. 明确 当前元素  和 栈顶元素 的><=三种情况
+2. 无论栈怎么改变，当前元素都要入栈
+3. 栈 存放元素下标
 
 ```python
-def stack(nums):
-    n = len(nums)
-    result = [0] * n  # 根据题目初始化结果
-    stack = []  # 栈中存储索引
-    
-    for i in range(n):  # 遍历数组
-        # 根据条件调整栈顶元素
-        while stack and <当前元素与栈顶索引元素满足条件>:
-            idx = stack.pop()  # 弹出栈顶
-            result[idx] = <根据题目更新结果>
-        stack.append(i)  # 当前元素入栈
-    
-    return result
+result = [0] * len(nums)  # 根据题目初始化结果
+stack = []  # 栈存下标
+
+for i in range(nums): 
+    while stack and <当前元素与栈顶元素满足条件>:
+        idx = stack.pop()  # 弹出
+        result[idx] = <根据题目更新结果>
+    stack.append(i)  # 当前元素入栈
+
+return result
 ```
 
 ### 6. 矩阵顺时针遍历
@@ -280,6 +283,8 @@ def spiralOrder(matrix):
 ```
 
 ## 链表
+
+核心解法：  （1）快慢指针  （2）虚拟头结点  
 
 ### 1. 插入元素
 
@@ -434,9 +439,9 @@ class Solution:
 
    求组合用startIndex，求排列用used
 
-2. 终止条件
+2. 终止条件 、记录结果一定要复制
 
-3. 遍历过程 （**明确**for横向遍历什么   递归纵向遍历什么    path存的什么）
+3. 遍历过程 （**明确**for横向遍历什么和取值范围   递归纵向遍历什么和取值范围    path存的什么）
 
 ### 2. 应用
 
@@ -482,27 +487,27 @@ return result
 
 ### （3）切割
 
-- 如何模拟那些切割线？ 类似组合， startIndex代表切割线 
-- 切割问题递归如何终止？ 切完整个字符串终止
-- 在递归循环中如何截取子串？s[startIndex: i+1]代表下标startIndex~i
+- 如何模拟那些切割线？ 类似组合， startIndex代表切割线   
+- 终止条件？切完整个字符串,即**startIndex==n**
+- 在递归循环中如何截取子串？s[startIndex: i+1]代表下标startIndex~i  刚切出来
 - 如何判断回文？ s==s[::-1]
 
 ```python
 # 131.分割回文串: 分割成子串，每个子串都是回文串
-result = [] # 全局参数存结果
-def backtracking(path,startIndex,s):
+result，path = [],[]  # 全局参数存结果
+def backtracking(startIndex,s):
     # 终止条件
     if startIndex == len(s):
         result.append(path.copy()) # 必须复制
         return
-    for i in range(startIndex, len(s)):
-        if s[startIndex: i+1] == s[startIndex: i + 1][::-1]: # 若反序和正序相同，则是回文串 
-            path.append(s[startIndex:i+1])
+    for i in range(startIndex, len(s)): # i取值0~n-1
+      	strr=s[startIndex:i+1]  # 刚切出来
+        if strr == strr[::-1]: # 如果回文，才继续剩余部分的切分 
+            path.append(strr)
             self.backtracking(s, i+1, path, result) # 纵向 从下一字符切割，判断其余是否仍为回文串
             path.pop() # 回溯
-path=[]
 startIndex=0 # 切割线
-backtracking(path,startIndex,s)
+backtracking(startIndex,s)
 return result
 ```
 
