--- a/解题方法论.md
+++ b/解题方法论.md
@@ -783,16 +783,16 @@ return -1 if dp[amount]==float("inf") else dp[amount]
 
 ```python
 dp=[False] *(len(s)+1) # 多一个空字符
-dp[0]=True
+dp[0]=True # 空字符True
 
 for i in range(1,len(s)+1):  # 背包1~n
     for j in range(i): # j 0~i-1  因为i还没开始算
         #判断当前是否拼出
-        if dp[j] and s[j:i] in wordDict: # sj~i-1
+        if dp[j] and s[j:i] in wordDict: # s j~i-1
             dp[i]=True
             break
 return dp[-1]
 ```
 
-2. 见高频题
+2. 最长递增子序列
 
