--- a/高频题.md
+++ b/高频题.md
@@ -247,13 +247,13 @@ class Solution:
 ```python
 class Solution:
     def longestPalindrome(self, s: str) -> str:
-        # 奇数子串  偶数子串
+        # 奇数串  偶数串
         def expand(left,right,s):
-            # 往外拓展 找最长子串
+            # 合法区间内往外拓展 找最长子串
             while left>=0 and right<len(s) and s[left]==s[right]:
                 left-=1
                 right+=1
-            return s[left+1:right] # while终止时，往外多扩了一次  所以左开右闭
+            return s[left+1:right] # while终止时回文子串区间left+1 ~ right-1 左开右闭
         
         long_str=""
         for i in range(len(s)):
@@ -309,8 +309,8 @@ class Solution:
 
 [Links](https://www.programmercarl.com/0300.%E6%9C%80%E9%95%BF%E4%B8%8A%E5%8D%87%E5%AD%90%E5%BA%8F%E5%88%97.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
-1. dp定义: dp[i]表示**0~i范围**且**nums[i]结尾**的最长递增子序列的长度
-2. 递推公式：j从0到i-1各个位置的最长升序子序列 + 1 的最大值
+1. dp定义: dp[i]表示**0~i-1范围**且**nums[i-1]结尾**的最长递增子序列的长度。 i取值0~n-1，对应元素nums[0]~nums[n-1]
+2. 递推公式：dp[i]依赖  nums[i]>nums[j]时max(dp[i],dp[j]+1)    j取值0~i-1
 3. 初始化：每一个i，dp[i]起始大小至少都是1
 
 ```python
@@ -318,11 +318,11 @@ class Solution:
     def lengthOfLIS(self, nums: List[int]) -> int:
         if len(nums) <= 1:
             return len(nums)
-        dp = [1] * len(nums)  # 序列长度至少为1
+        dp = [1] * len(nums) # i取值0~n-1
         dp[0]=1 #初始化
         for i in range(1, len(nums)): # 从第二个开始看递增子序列  范围1~n-1
-            for j in range(i): # 取值0~i-1
-                if nums[j] < nums[i]: # 大于才有可能成为最长序列的结尾元素
+            for j in range(i): # j取值0~i-1
+                if nums[i] > nums[j]: # 大于才有机会
                     dp[i] = max(dp[i], dp[j] + 1)    
         return max(dp)
 ```
@@ -346,6 +346,30 @@ class Solution:
                     dp[i]=True
                     break
         return dp[len(s)]
+```
+
+### 6. 分割等和子集- 背包正好装满
+
+01背包 正好装满   
+
+- dp定义：dp[i] 用nums数组的元素组合，使得恰好等于容量i   False装不成  True正好装满
+- 递推公式  dp[i] 当背包容量大于物品j的容量nums[j]时  验证dp[i] or dp[i-nums[j]]
+- 顺序:  先物品后背包  一维dp内层倒序
+
+```python
+# 边界条件
+if sum(nums)%2!=0:
+    return False
+target=sum(nums)//2
+dp=[False]* (target+1) # 0代表空背包  下标从1~n代表容量 全部初始化为False
+
+dp[0]=True
+for i in range(len(nums)): # 先物品  i下标0~n-1
+    for j in range(target,0,-1): # 再背包  j下标n~1  01背包内层倒序
+        # 如果背包容量大于物品，则才有变化
+        if j >=nums[i]:
+            dp[j]= dp[j] or dp[j-nums[i]]
+return dp[target]
 ```
 
 
