--- a/高频题.md
+++ b/高频题.md
@@ -249,7 +249,7 @@ return dp[-1]
 
 [links](https://www.programmercarl.com/0072.%E7%BC%96%E8%BE%91%E8%B7%9D%E7%A6%BB.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)  两个单词 word1 和 word2，将 word1 转换成 word2 所使用的最少操作数 
 
-1. dp定义：dp[i] [j] 表示以下标i-1为结尾的字符串word1，和以下标j-1为结尾的字符串word2的最短编辑次数
+1. dp定义： word1前i个字符 word2前j个字符的最小编辑距离
 
 2. 递推公式
 
