--- a/高频题.md
+++ b/高频题.md
@@ -76,49 +76,49 @@ class Solution:
 
 ### 3. 数组中的第K个最大元素
 
-堆排序
-
+[堆排序 核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)  搞懂「建堆」、「调整」和「删除」的过程。
 ```python
+# 查找数组第K大的元素
 def findKthLargest(nums, k):
-    """
-    找到数组中第K个最大的元素。
-    
-    :param nums: 一个整数数组
-    :param k: 要找的第K个最大元素的位置
-    :return: 第K个最大的元素
-    """
-    # 构建最大堆
+    # 1. 堆化  从当前元素自顶向下全部递归堆化
+    def max_heap(nums,length,i):
+        # 2个终止条件 （1）叶子节点 （2）当前节点非叶子节点，但已是最大值，无需交换
+        largest=i
+        left,right=2*i+1,2*i+2 # 左右孩子
+
+        if left>=length and right>=length:  # 下标0~n-1   n已越界
+            return 
+
+        if left<length and nums[largest]<nums[left]:
+            largest=left
+        if right<length and nums[largest]<nums[right]:
+            largest=right
+        if largest==i: 
+            return
+
+        #  单层递归逻辑  交换并递归堆化
+        nums[i],nums[largest]=nums[largest],nums[i]
+        max_heap(nums,length,largest)
+
+    # 2. 建堆：从最后一个非叶子节点开始，自底向上构建最大堆
     def build_max_heap(nums):
-        length = len(nums)
-        # 从最后一个非叶子节点开始，向上构建最大堆
-        for i in range(length//2 - 1, -1, -1):
-            max_heapify(nums, length, i)
-    
-    # 调整堆，使其满足最大堆的性质  如果子节点大于父节点，就交换它们，并递归调整子树。
-    def max_heapify(nums, length, i):
-        largest = i
-        left = 2 * i + 1
-        right = 2 * i + 2
-        if left < length and nums[largest] < nums[left]:
-            largest = left
-        if right < length and nums[largest] < nums[right]:
-            largest = right
-        if largest != i:
-            nums[i], nums[largest] = nums[largest], nums[i]
-            max_heapify(nums, length, largest)
-    
-    build_max_heap(nums) # 构建最大堆
-    for i in range(k - 1):
-        nums[0], nums[-1] = nums[-1], nums[0]  # 交换堆顶和最后一个元素
-        length = len(nums) - 1  # 减少堆的大小
-        max_heapify(nums, length, 0)  # 重新调整堆
-    return nums[0]  # 返回堆顶元素，即第K个最大的元素
+        length=len(nums)
+        for i in range(length//2-1,-1,-1): # 最后一个非叶子节点 --> 根节点
+            max_heap(nums,length,i)
+    build_max_heap(nums)
 
+    # 3. 出堆  移除k-1个元素，堆顶就是第k大的元素
+    for i in range(len(nums)-1,len(nums)-k,-1): # 左闭右开，差值就是元素个数
+        # （1）交换堆顶和堆底元素  （2）缩小堆范围 从根节点堆化
+        nums[0],nums[i]=nums[i],nums[0]
+        # i指堆范围，持续缩小堆范围 从0~n-1缩小为0~n-k+1,代表移除k-1个元素
+        # 0 代表 每轮都完整从根节点开始堆化
+        max_heap(nums,i,0) 
+    return nums[0]
 # 示例
-nums = [3,2,1,5,6,4]
+nums = [3, 2, 1, 5, 6, 4]
 k = 2
-print(findKthLargest(nums, k))  # 输出应该是5，因为5是第二大的元素
-
+print(findKthLargest(nums, k))  # 输出应该是 5
 ```
 
 ## 栈
@@ -151,8 +151,6 @@ class Solution:
                 cur_str+=char # 字母
         return cur_str
 ```
-
-
 
 ## 回溯
 
