--- a/解题方法论.md
+++ b/解题方法论.md
@@ -10,14 +10,15 @@
 
 #### 二分查找
 
-- 时间复杂度O(logn)  
+- 时间复杂度O(logn)     
+- 如果没有，**left**指向目标被插入的位置
 - 应用：寻找一个数、寻找左侧边界、寻找右侧边界
 
 ```python
 # 寻找一个数
 def binary_search(nums, target):
     left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
-    while left <= right: # 双闭区间左右边界也要判断 需要等号检查最后一个元素
+    while left <= right: # 双闭区间左右边界也要比较 
         mid = (left + right) // 2
         # 不要else 必须所有情况列出来
         if nums[mid] < target: 
@@ -26,42 +27,49 @@ def binary_search(nums, target):
             right = mid - 1 
         elif nums[mid] == target:
             return mid
-    return -1
+    return -1 # 如果没有，left指向目标被插入的位置
 ```
 
 ```python
-# 寻找左侧边界
-def left_bound(nums: List[int], target: int) -> int:
-    left, right = 0, len(nums) - 1 
-    result=-1 
-    while left <= right:
-        mid = left + (right - left) // 2 
-        if nums[mid] < target:
-            left = mid + 1
-        elif nums[mid] > target:
-            right = mid - 1
-        elif nums[mid] == target:
-            result = mid # 记录结果，不断更新结果
-            right = mid - 1 # 寻找左边界，故收缩右边界
-    return result
+# 在排序数组中查找元素的第一个和最后一个位置下标，即寻找左侧边界 和 右边界
+def search(nums, target) -> int:
+    # ------左边界------
+    left,right=0,len(nums)-1 
+    final_left=-1 # 记录结果，持续更新
+    while left<=right:
+        mid=(left+right)//2
+        if nums[mid]>target:
+            right=mid-1
+        elif nums[mid]<target:
+            left=mid+1
+        elif nums[mid]==target:
+            final_left=mid 
+            right=mid-1  # 寻找左边界 要收缩右边界，唯一区别
+      
+    # ------右边界------
+    left,right=0,len(nums)-1 
+    final_right=-1 
+    while left<=right: 
+        mid=(left+right)//2
+        if nums[mid]>target:
+            right=mid-1
+        elif nums[mid]<target:
+            left=mid+1
+        elif nums[mid]==target:
+            final_right=mid
+            left=mid+1  # 寻找右边界  就要收缩左边界，唯一区别
+       
+        return [final_left,final_right] # 找不到返回[-1,-1]
 ```
 
-```python
-# 寻找右侧边界
-def right_bound(nums: List[int], target: int) -> int:
-    left, right = 0, len(nums) - 1 
-    result=-1 
-    while left <= right:
-        mid = left + (right - left) // 2 
-        if nums[mid] < target:
-            left = mid + 1
-        elif nums[mid] > target:
-            right = mid - 1
-        elif nums[mid] == target:
-            result = mid # 记录结果，不断更新结果
-            left = mid + 1 # 寻找右边界，故收缩左边界
-    return result
-```
+##### 旋转排序数组
+
+[4, 5, 6, 7, 0, 1, 2]
+
+- 搜索目标值：根据左右区间的有序性和目标值范围调整指针
+- 寻找最小值：只需比较中点与右端点
+
+##### 寻找两个正序数组的中位数
 
 
 
