--- a/高频题.md
+++ b/高频题.md
@@ -77,6 +77,9 @@ class Solution:
 ### 3. 数组中的第K个最大元素
 
 [堆排序 核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)  搞懂「建堆」、「调整」和「删除」的过程。
+
+大顶堆、小顶堆唯一区别是 堆化时比较父节点值 **>** 或 **<**子节点值。 
+
 ```python
 # 查找数组第K大的元素
 def findKthLargest(nums, k):
@@ -89,7 +92,7 @@ def findKthLargest(nums, k):
         if left>=length and right>=length:  # 下标0~n-1   n已越界
             return 
 
-        if left<length and nums[largest]<nums[left]:
+        if left<length and nums[largest]<nums[left]:  
             largest=left
         if right<length and nums[largest]<nums[right]:
             largest=right
@@ -112,7 +115,7 @@ def findKthLargest(nums, k):
         # （1）交换堆顶和堆底元素  （2）缩小堆范围 从根节点堆化
         nums[0],nums[i]=nums[i],nums[0]
         # i指堆范围，持续缩小堆范围 从0~n-1缩小为0~n-k+1,代表移除k-1个元素
-        # 0 代表 每轮都完整从根节点开始堆化
+        # 0指 下标0元素变化，需要堆化
         max_heap(nums,i,0) 
     return nums[0]
 # 示例
@@ -120,6 +123,14 @@ nums = [3, 2, 1, 5, 6, 4]
 k = 2
 print(findKthLargest(nums, k))  # 输出应该是 5
 ```
+
+
+
+## 二分查找
+
+
+
+
 
 ## 栈
 
