新增智力题

--- a/解题方法论.md
+++ b/解题方法论.md
@@ -486,27 +486,24 @@ return result
 
 ```python
 # leetcode46 全排列
-result=[] # 全局参数存结果
-def backtrack(path,nums,used):
+result,path=[],[] # 全局参数
+def backtrack(nums,used):
     # 终止条件
     if len(path)==len(nums):
-        result.append(path.copy()) # 存放结果 !必须复制!
-        return 
-
-    # 横向纵向
+        result.append(path.copy()) # 复制结果
+        return
+    
     for i in range(len(nums)):
         if used[i]==True:
-            continue  # 直接跳过
+            continue # 跳过已访问的元素
         else:
             path.append(nums[i])
             used[i]=True
-            backtrack(path,nums,used) 
+            backtrack(nums,used)
             path.pop()
             used[i]=False
-
-path=[]
-used=[False] * len(nums) # 求排列有序 跳过已使用过的元素
-backtrack(path,nums,used)
+used=[False]*len(nums) 
+backtrack(nums,used) # 求排列有序 跳过已使用过的元素
 return result
 ```
 
