--- a/高频题.md
+++ b/高频题.md
@@ -165,7 +165,7 @@ class Solution:
 
 ## 回溯
 
-### 1. 分割回文串
+### 1. 分割回文串⭐️
 
 [links](https://www.programmercarl.com/0131.%E5%88%86%E5%89%B2%E5%9B%9E%E6%96%87%E4%B8%B2.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
@@ -180,7 +180,7 @@ result，path = [],[]  # 全局参数存结果
 def backtracking(startIndex,s):
     # 终止条件
     if startIndex == len(s):
-        result.append(path.copy()) # 必须复制
+        result.append(path.copy()) # 必须复制  遍历到最后，说明整个字符串都被分为回文串。保存结果
         return
     for i in range(startIndex, len(s)): # i取值0~n-1
       	strr=s[startIndex:i+1]  # 刚切出来
