--- a/解题方法论.md
+++ b/解题方法论.md
@@ -4,7 +4,11 @@
 
 ## 数组
 
-### 1. 前缀和    区间和
+### 1. 前缀和、区间和
+
+- 前缀和：明确定义，即是否包含当前元素、遍历的范围
+
+- 哈希表 {前缀和：出现次数}，初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
 
 ### 2. 查找算法
 
@@ -209,7 +213,13 @@ for i in range(nums):
 return result
 ```
 
-### 6. 矩阵顺时针遍历
+### 6. 螺旋矩阵
+
+思路：
+
+1. 从外到内，一圈一圈顺时针遍历
+2. 4个指针定义边界  top bottom  left right
+3. 逆序遍历时判断是否存在，即右边向左边需判断是否有该行、下面向上边 需判断是否有该列
 
 ```python
 # 定义四个边界 
@@ -263,30 +273,25 @@ def spiralOrder(matrix):
 4. 旧表更新头结点
 
 ### 2. 翻转链表
-思路：pre新链表    cur当前节点     next下一个节点
+思路：三个节点  新链表表头new_node   旧链表当前节点cur_node    旧链表下一个节点next_node
 
-1. 旧链表保存下一个节点
-2. 旧链表当前节点指向新链表头（翻转指针）
-3. 新链表更新表头
-4. 旧链表更新表头
+1. 保存旧链表下一个节点
+2. 旧链表当前节点指向新链表头 
+3. 更新新链表表头
+4. 更新旧链表
 
 ```python
 def reverse_linked_list(head):
-    """
-    :param head: 链表的头节点
-    :return: 翻转后的链表头节点
-    """
-    prev = None  # 上一个节点，初始化为 None
-    current = head  # 当前节点，初始化为链表的头节点
+    new_node = None  # 新链表 初始化为None
+    cur_node = head  # 当前节点，初始化为链表的头节点
 
     # 遍历链表，直到当前节点为空   
-    while current:
-        next_node = current.next  # 1. 旧链表保存下一个节点
-        current.next = prev  # 2. 将当前节点指向新链表头（翻转指针）
-        prev = current  # 3.新链表更新表头
-        current = next_node  # 4. 旧链表更新表头
-
-    return prev  # 返回新的头节点
+    while cur_node:
+        next_node = cur_node.next  # 1. 保存旧链表下一个节点
+        cur_node.next = new_node  # 2. 将当前节点指向新链表头
+        new_node = cur_node  # 3.新链表更新表头
+        cur_node = new_node  # 4. 旧链表更新表头
+    return new_node  # 返回新的头节点
 ```
 
 ### 3. 合并两个有序链表
