--- a/解题方法论.md
+++ b/解题方法论.md
@@ -16,10 +16,10 @@
 
 - 时间复杂度O(logn)     
 - 如果没有，**left**指向目标被插入的位置
-- 应用：寻找一个数、寻找左侧边界、寻找右侧边界
+
+##### 1. 查找目标值
 
 ```python
-# 寻找一个数
 def binary_search(nums, target):
     left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
     while left <= right: # 双闭区间左右边界也要比较 
@@ -34,6 +34,7 @@ def binary_search(nums, target):
     return -1 # 如果没有，left指向目标被插入的位置
 ```
 
+##### 2. 寻找目标值的左右边界
 ```python
 # 在排序数组中查找元素的第一个和最后一个位置下标，即寻找左侧边界 和 右边界
 def search(nums, target) -> int:
@@ -63,17 +64,18 @@ def search(nums, target) -> int:
             final_right=mid
             left=mid+1  # 寻找右边界  就要收缩左边界，唯一区别
        
-        return [final_left,final_right] # 找不到返回[-1,-1]
+    return [final_left,final_right] # 找不到返回[-1,-1]
 ```
 
-##### 旋转排序数组
+
+##### 3. 旋转排序数组❓
 
 [4, 5, 6, 7, 0, 1, 2]
 
 - 搜索目标值：根据左右区间的有序性和目标值范围调整指针
 - 寻找最小值：只需比较中点与右端点
 
-##### 寻找两个正序数组的中位数
+##### 4. 寻找两个正序数组的中位数❓
 
 
 
@@ -81,27 +83,25 @@ def search(nums, target) -> int:
 
 #### 快速排序QuickSort
 
-先将一个元素排好序，然后再将剩下的元素排好序。时间复杂度O(nlogn) ，类似二叉树的前序遍历
+时间复杂度O(nlogn) 
+
+1. 确定基准值，左侧找小于基准值，右侧找大于基准值，持续交换
+2. 将基准值 左右区间，递归排序。
 
 ```python
-def partition(nums, left, right):
+def swap(nums, left, right):
     """
-    分区函数，选择一个基准元素,将数组分为两部分
-
-    :param nums: 待排序的数组
-    :param left: 排序的起始索引
-    :param right: 排序的结束索引
-    :return: 基准元素的最终位置
+    分区 选择一个基准元素,将数组分为两部分
     """
    # 以 nums[left] 作为基准数
    i,j=left,right
    base = nums[left]
-   while i<j: # 等号 不需要交换
-      while i < j and nums[j] >= base: # 右指针找到第一个小于基准的元素，准备交换  
-         j -= 1
+   while i<j: # 等号无需交换
       while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素，准备交换
          i += 1
-      if i < j: # 每次变动序号，都要判断   交换两者
+      while i < j and base <= nums[j]: # 右指针找到第一个小于基准的元素，准备交换  
+         j -= 1
+      if i < j: # 下标每次变动，都要判断
       	 nums[i], nums[j] = nums[j], nums[i] 
     nums[left], nums[i] = nums[i], nums[left] # 基准元素交换到对应位置，返回基准元素所在下标
     return i
@@ -114,14 +114,41 @@ def quicksort(nums, left, right):
     # 终止条件   等号不需要排序
     if left >= right:
       	return 
-    i = partition(nums, left, right) # 基准元素的索引 
-    quicksort(nums, left, i - 1)  # 左区间排序
-    quicksort(nums, i + 1, right)  # 右区间排序
+    base_index = swap(nums, left, right) # 分区，返回基准值对应下标 
+    quicksort(nums, left, base_index - 1)  # 左区间排序
+    quicksort(nums, base_index + 1, right)  # 右区间排序
 ```
 
 #### 堆排序Heap
 
-[堆排序 核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)  搞懂「建堆」、「调整」和「删除」的过程。
+[堆排序 核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)  搞懂「堆化」、「建堆」和「出堆」的过程。 整体流程如下：
+
+1. 堆化（递归）：从当前下标向下全部堆化
+
+   1. 参数和返回值：3个入参  nums数组、length堆长度、i待堆化的下标
+
+   2. 终止条件 （1）当前为叶子节点 （2）当前非叶子节点，但相比左右孩子已是最大值，无需交换
+
+      ```python
+      left,right=2* i+1, 2*i+2  # 左右孩子下标
+      ```
+
+   3. 单层递归逻辑：当前值 与最大值交换，继续向下堆化
+
+2. 建最大堆：从最后一个非叶子节点开始到根节点，构建最大堆
+
+   ```python
+   length//2-1  # 最后一个非叶子节点的下标
+   ```
+
+3. 出堆：移除k-1个元素，堆顶就是第k大的元素
+
+   1. 交换堆顶和堆底元素 
+   2.  堆长度-1，堆顶执行堆化
+
+- tips:
+
+  (1)大小顶堆唯一区别是堆化时比较当前节点 > or <孩子。 
 
 详见 [高频题-查找数组第K大的元素](高频题.md)
 
@@ -133,6 +160,28 @@ def quicksort(nums, left, right):
 - 什么时候缩小窗口？
 - 什么时候更新答案？
 
+#### 1. 解题2步骤
+
+1. 初始化参数 
+
+   （1）滑动窗口参数：windows={}   标识符valid=0     left,right=0,0**左开右闭**，避免边界问题
+
+   （2）子串参数need： 无重复字符用集合set()、统计字符频率用Counter
+
+   （3）记录结果参数
+
+2. 遍历字符串 right<len(s)   right是即将遍历的下标
+
+   （1）判断当前元素 更新窗口、标识符，同时扩大右边界
+
+   （2）判断是否收缩窗口
+
+   ​	     固定窗口判断条件  窗口已满 `if right-left>= len(子串)`
+
+   ​		 动态窗口判断条件  合法区间内满足子串条件  `while left<right and valid==len(need.keys())`
+
+   （3）收缩两步骤  （a）记录当前结果（b）左侧窗口移出元素，同时缩小左边界
+
 ```python
 # 最小覆盖子串  
 def minWindow(self, s: str, t: str) -> str:
@@ -142,7 +191,7 @@ def minWindow(self, s: str, t: str) -> str:
    	valid=0 # 单字符满足频次时+1   值等于need长度时满足条件
   	left，right, = 0,0 # 左闭右开[left,right)   区间[0, 0)中没有元素，避免边界问题  窗口长度=right-left
     
-    # 子串参数   无重复字符用Set() 统计字符频率用Counter
+    # 子串参数   
     from collections import Counter
     need=Counter(t) # "eex" --> Counter({'e': 2, 'x': 1})
 
@@ -161,8 +210,7 @@ def minWindow(self, s: str, t: str) -> str:
         right+=1
         
         # 3. 判断是否收缩窗口
-        # if right-left >= len(t): # 固定窗口判断条件
-        while left<right and valid==len(need.keys()): # 动态窗口判断条件
+        while left<right and valid==len(need.keys()): 
             # 4. 记录结果
             if right-left<length:
               	start=left
@@ -181,7 +229,7 @@ def minWindow(self, s: str, t: str) -> str:
 [links](https://labuladong.online/algo/essential-technique/sliding-window-framework/#%E6%BB%91%E5%8A%A8%E7%AA%97%E5%8F%A3%E6%A1%86%E6%9E%B6%E6%A6%82%E8%A7%88)
 
 ```python
-无重复字符的最长子串: 找出其中不含有重复字符的最长子串的长度。
+无重复字符的最长子串: 找出其中不含有重复字符的最长子串的长度。  set  add  remove
 输入: s = "abcabcbb"  输出: 3,即"abc" 
 
 # 动态窗口
@@ -194,9 +242,9 @@ def minWindow(self, s: str, t: str) -> str:
 
 ### 5. 单调栈
 
-#### 单调栈三步骤
+#### 单调栈3步骤
 
-1. 明确 当前元素  和 栈顶元素 的><=三种情况
+1. list模拟栈，明确 当前元素  和 栈顶元素 的><=三种情况
 2. 无论栈怎么改变，当前元素都要入栈
 3. 栈 存放元素下标
 
@@ -219,7 +267,7 @@ return result
 
 1. 从外到内，一圈一圈顺时针遍历
 2. 4个指针定义边界  top bottom  left right
-3. 逆序遍历时判断是否存在，即右边向左边需判断是否有该行、下面向上边 需判断是否有该列
+3. **逆序遍历**时判断是否存在，即右边向左边需判断是否有该行、下面向上边 需判断是否有该列
 
 ```python
 # 定义四个边界 
@@ -302,25 +350,25 @@ def reverse_linked_list(head):
 def merge_two_lists(l1, l2):
     # 创建一个虚拟头节点，方便处理合并操作
     dummy = ListNode(0)
-    current = dummy  # 用于遍历和构建合并链表的指针
+    cur_node = dummy  # 用于遍历和构建合并链表的指针
 
     # 遍历两个链表，直到其中一个链表为空
     while l1 and l2:
         if l1.val < l2.val:
-            current.next = l1
+            cur_node.next = l1
             l1 = l1.next  # 更新l1表头
         else:
             current.next = l2
             l2 = l2.next  # 更新l2表头
         
         # 更新新链表表头
-        current = current.next
+        cur_node = cur_node.next
 
-    # 将 剩余的节点连到新链表的末尾
+    # 剩余的节点接到新链表的末尾
     if l1:
-        current.next = l1
+        cur_node.next = l1
     if l2:
-        current.next = l2
+        cur_node.next = l2
 
     # 返回合并后的链表，去掉虚拟头节点
     return dummy.next
