--- a/高频题.md
+++ b/高频题.md
@@ -76,22 +76,18 @@ class Solution:
 
 ### 3. 数组中的第K个最大元素
 
-[堆排序 核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)  搞懂「建堆」、「调整」和「删除」的过程。
-
-大顶堆、小顶堆唯一区别是 堆化时比较父节点值 **>** 或 **<**子节点值。 
-
 ```python
 # 查找数组第K大的元素
 def findKthLargest(nums, k):
     # 1. 堆化  从当前元素自顶向下全部递归堆化
     def max_heap(nums,length,i):
         # 2个终止条件 （1）叶子节点 （2）当前节点非叶子节点，但已是最大值，无需交换
-        largest=i
         left,right=2*i+1,2*i+2 # 左右孩子
-
-        if left>=length and right>=length:  # 下标0~n-1   n已越界
+        if left>=length and right>=length:  # 没有孩子，属于叶子结点
             return 
-
+				
+        # 合理区间内最大值下标  判断是否需要交换
+        largest=i
         if left<length and nums[largest]<nums[left]:  
             largest=left
         if right<length and nums[largest]<nums[right]:
@@ -99,11 +95,11 @@ def findKthLargest(nums, k):
         if largest==i: 
             return
 
-        #  单层递归逻辑  交换并递归堆化
+        #  单层递归逻辑  交换并向下持续堆化
         nums[i],nums[largest]=nums[largest],nums[i]
         max_heap(nums,length,largest)
 
-    # 2. 建堆：从最后一个非叶子节点开始，自底向上构建最大堆
+    # 2. 建堆：从最后一个非叶子节点开始到根节点，构建最大堆
     def build_max_heap(nums):
         length=len(nums)
         for i in range(length//2-1,-1,-1): # 最后一个非叶子节点 --> 根节点
@@ -114,8 +110,7 @@ def findKthLargest(nums, k):
     for i in range(len(nums)-1,len(nums)-k,-1): # 左闭右开，差值就是元素个数
         # （1）交换堆顶和堆底元素  （2）缩小堆范围 从根节点堆化
         nums[0],nums[i]=nums[i],nums[0]
-        # i指堆范围，持续缩小堆范围 从0~n-1缩小为0~n-k+1,代表移除k-1个元素
-        # 0指 下标0元素变化，需要堆化
+        # i指堆范围，持续缩小堆范围 堆结尾从n-1缩小为n-k+1,代表移除k-1个元素
         max_heap(nums,i,0) 
     return nums[0]
 # 示例
@@ -128,9 +123,7 @@ print(findKthLargest(nums, k))  # 输出应该是 5
 
 ## 二分查找
 
-
-
-
+pass
 
 ## 栈
 
