--- a/解题方法论.md
+++ b/解题方法论.md
@@ -428,7 +428,7 @@ class Solution:
 #         self.right = right
 class Solution:
     def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
-        # 边界   空树
+        # 边界条件   空树
         if not root:
             return []
         queue = collections.deque([root]) # deque双端队列  装入根节点
@@ -453,30 +453,30 @@ class Solution:
 
 ### 1. 回溯三步骤
 
-1. 参数
+1. 确定传参
 
-   参数：path存放结果，result存放结果集
+   - 全局参数：path存放结果，result存放结果集
 
-   求组合用startIndex，求排列用used
+   - 局部参数：求组合用startIndex，求排列用used
 
-2. 终止条件 、记录结果一定要复制
+2. 确定终止条件    保存结果**必须复制**
 
-3. 遍历过程 （**明确**for横向遍历什么和取值范围   递归纵向遍历什么和取值范围    path存的什么）
+3. 遍历时必须**明确**for横向遍历什么和取值范围    纵向递归遍历什么和取值范围    path存的什么）
 
 ### 2. 应用
 
-### （1）子集
+### （1）子集  startIndex，先记录结果再终止条件
 
 ```python
 # leetcode78 给定数组，返回所有可能的子集
 result，path = [],[] # 全局参数
 def backtracking(nums,startIndex):
     result.append(path.copy())  # 记录结果，前序位置每个节点的值都是一个子集
-    if startIndex >= len(nums):  # 终止条件
+    if startIndex == len(nums):  # 终止条件
         return
-    for i in range(startIndex, len(nums)): # 横向遍历的起始位置
+    for i in range(startIndex, len(nums)): 
         path.append(nums[i])
-        self.backtracking(nums, i + 1, path, result) # #递归 i控制纵向遍历位置。i+1不能重复取
+        backtracking(nums, i+1) # 递归 i控制纵向遍历位置。i+1不能重复取
         path.pop()
 startIndex=0
 backtracking(nums,startIndex)
@@ -485,55 +485,54 @@ return result
 
 [Links](https://www.programmercarl.com/0078.%E5%AD%90%E9%9B%86.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
 
-### （2）组合
+### （2）组合  startIndex
 
-组合无序用startIndex
+组合无序
 
 ```python
-result=[] # 全局参数，记录结果
-def backtracking(path,startIndex,xxx): 
-    if 终止条件:
+result，path = [],[] # 全局参数
+def backtracking(nums,startIndex):
+    if 终止条件:  # 长度 or 总和等于指定值
         result.append(path.copy())  # 存放结果 !必须复制!
-        return   #返回
-    for i in range(startIndex,len(xxx)): # 横向遍历的起始位置
-        处理当前值
-        backtrack(path,i,xxx)  #递归 i控制纵向遍历位置，依赖于横向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
-        撤销当前值  
-path=[]
-startIndex=0 # 横向遍历的起始位置
-backtracking(path,startIndex,xxx)
+        return 
+    for i in range(startIndex,len(nums)): # 横向遍历的起始位置
+        path.append(nums[i])
+        backtrack(nums,i)  #递归 i控制纵向遍历位置，依赖于横向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
+        path.pop()
+startIndex=0 
+backtracking(nums,startIndex)
 return result 
 ```
 
-### （3）切割
+### （3）切割  startIndex
 
 - 如何模拟那些切割线？ 类似组合， startIndex代表切割线   
-- 终止条件？切完整个字符串,即**startIndex==n**
-- 在递归循环中如何截取子串？s[startIndex: i+1]代表下标startIndex~i  刚切出来
+- 终止条件？切完整个字符串,即**startIndex== len(s)**
+- 在递归循环中如何截取子串？s[startIndex: i+1]代表下标startIndex~i  刚切出来，左开右闭
 - 如何判断回文？ s==s[::-1]
 
 ```python
 # 131.分割回文串: 分割成子串，每个子串都是回文串
 result，path = [],[]  # 全局参数存结果
-def backtracking(startIndex,s):
+def backtracking(s,startIndex):
     # 终止条件
     if startIndex == len(s):
-        result.append(path.copy()) # 必须复制
+        result.append(path.copy()) # 切完说明整个字符串切成回文  必须复制
         return
     for i in range(startIndex, len(s)): # i取值0~n-1
-      	strr=s[startIndex:i+1]  # 刚切出来
+      	strr=s[startIndex:i+1]  # 切出来的子串
         if strr == strr[::-1]: # 如果回文，才继续剩余部分的切分 
             path.append(strr)
-            self.backtracking(s, i+1, path, result) # 纵向 从下一字符切割，判断其余是否仍为回文串
+            backtracking(s, i+1) # 纵向 从下一字符切割，判断其余是否仍为回文串
             path.pop() # 回溯
 startIndex=0 # 切割线
-backtracking(startIndex,s)
+backtracking(s,startIndex)
 return result
 ```
 
 [links](https://www.programmercarl.com/0131.%E5%88%86%E5%89%B2%E5%9B%9E%E6%96%87%E4%B8%B2.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
-### （4）排列
+### （4）排列  used，无startIndex
 
 排列有序，需要穷举元素的位置  用**used**标记还可以选择哪些元素
 
@@ -552,7 +551,7 @@ def backtrack(nums,used):
         else:
             path.append(nums[i])
             used[i]=True
-            backtrack(nums,used)
+            backtrack(nums,used) # 纵向每次遍历整个数组，带着used
             path.pop()
             used[i]=False
 used=[False]*len(nums) 
@@ -562,54 +561,52 @@ return result
 
 ## 图论
 
-### 1. 深度优先遍历
+### 1. 深度优先遍历3步骤
 
-岛屿数量
+1. 递归参数：    grid、当前坐标i和j
+2. 递归终止条件：    （1）上下左右四边越界（2）当前位置已经是海水
+3. 单层递归逻辑： 当前位置变为海水，再递归淹没上下左右
 
 ```python
+# 岛屿数量
 class Solution:
     def numIslands(self, grid: List[List[str]]) -> int:
         res=0 # 岛屿数量初始化为0
        
         # 遍历grid
         for i in range(len(grid)):
-            for j in range(len(grid[0])):
-                # 判断当前元素 是否为1，即为岛屿
-                if grid[i][j]=="1":
-                    # 每发现一个岛屿，岛屿数+1
-                    res+=1
-                    # 用深度优先遍历DFS将岛屿淹掉
-                    self.dfs(grid,i,j)
+            for j in range(len(grid[0])):  
+                if grid[i][j]=="1": # 发现岛屿
+                    res+=1 # 岛屿数+1
+                    self.dfs(grid,i,j) # 将岛屿周围淹掉
         return res
     def dfs(self,grid,i,j):
-        # 递归终止条件  上下左右四边
+        # 递归终止条件 （1）上下左右四边越界 （2）当前已是海水
         if i<0 or j<0 or i>=len(grid) or j>=len(grid[0]):
-            # 超出索引边界  什么都不操作
             return 
-        if grid[i][j]=="0":
-            # 已经是海水  什么都不操作
+        if grid[i][j]=="0": 
             return 
 
-        # 将（i，j）变为海水
-        grid[i][j]="0"
-        # 同时递归淹没上下左右陆地
+        
+        grid[i][j]="0" # 淹没当前位置
+        # 再递归淹没上下左右
         self.dfs(grid,i-1,j)
         self.dfs(grid,i+1,j)
         self.dfs(grid,i,j-1)
         self.dfs(grid,i,j+1)
 ```
 
-### 2. 广度优先遍历
+### 2. 广度优先遍历3步骤
 
-腐烂橘子
+1. 队列装入腐烂橘子坐标，同时统计新鲜橘子数量
+2. 遍历第一波，所有腐烂橘子同时上下左右传播一次，减少新鲜橘子数量。将新传染的橘子装入队列，进行下一波传染。
+3. 全部传播完后判断是否还有新鲜橘子
 
 ```python
+# 腐烂橘子
 class Solution:
     def orangesRotting(self, grid: List[List[int]]) -> int:
         from collections import deque
-        # 1. 统计腐烂橘子坐标，统计新鲜橘子数量
-        # 2. 腐烂橘子同时传播一次，减少新鲜橘子数量
-        # 3. 全部传播完后判断是否还有新鲜橘子
         deq = deque()  # 保存腐烂橘子
         fresh_nums = 0  # 新鲜橘子的数量
 
@@ -624,28 +621,25 @@ class Solution:
         # 如果没有新鲜橘子，直接返回0
         if fresh_nums == 0:
             return 0
-        
-        # 开始腐烂
         time = 0  # 耗时
         direct = [(-1, 0), (1, 0), (0, -1), (0, 1)]  # 上下左右四个方向
-        while deq:
-            # 当前这波腐烂的橘子数目
+        while deq: # 开始第一波腐烂
             for _ in range(len(deq)):
-                x, y = deq.popleft()  # 获取当前腐烂橘子的位置
+                x, y = deq.popleft()  # 当前腐烂橘子的位置
                 # 尝试上下左右传播腐烂
                 for dx, dy in direct:
                     nx, ny = x + dx, y + dy
-                    # 判断新位置是否有效且是新鲜橘子
+                    # 判断新位置处于合法区间，且是否为新鲜橘子
                     if 0 <= nx < len(grid) and 0 <= ny < len(grid[0]) and grid[nx][ny] == 1:
                         grid[nx][ny] = 2  # 1.将新鲜橘子腐烂
                         fresh_nums -= 1  # 2.新鲜橘子数量减少
                         deq.append((nx, ny))  # 3.将新腐烂的橘子加入第二波队列
             time += 1  # 第一波传染完毕，次数+1
 
-        # 最后一次传播是多余的，所以-1
-
-        # 如果还有新鲜橘子，返回-1，否则返回总时间
-        return time - 1 if fresh_nums == 0 else -1
+				if fresh_nums == 0:
+          	return time-1  #最后一次传播是多余的，所以-1
+        else:
+          	return -1  # 如果还有新鲜橘子，返回-1
 ```
 
 
@@ -659,20 +653,27 @@ class Solution:
 
 ### 1. 动态规划5步骤
 
-- dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、长度，以及对应元素的取值范围
-- 递推公式      判断当前物品是否能装入背包
-- 初始化
-- 遍历顺序     先物后背，谐音**吾辈**当自强    求排列（特例，先背后物）
-- 举例推导dp数组    
+1. dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、总长度，以及对应元素的取值范围
+
+2. 递推公式      更新依赖于哪些因素
+
+3. 初始化
+
+4. 遍历顺序     先物后背，谐音**吾辈**当自强    求排列（特例，先背后物）
+
+5. 举例推导数组    
+
+- 背包问题tips：
+  - 背包容量从0开始
+  - 一维dp    01背包时内层倒序，避免重复；完全背包时内层正序，需要重复取。
+  - 求排列是特例，先物品后背包
 
 ### 2. 01背包
 
 <img src="assets/image-20241211001418031.png" alt="image-20241211001418031" style="zoom:30%;" />
 
 #### （1）[二维dp](https://www.programmercarl.com/%E8%83%8C%E5%8C%85%E7%90%86%E8%AE%BA%E5%9F%BA%E7%A1%8001%E8%83%8C%E5%8C%85-1.html)
-1. dp 定义：dp[i] [j]从下标为0~i的物品中任取，放入容量为j的背包的最大价值。
-   - 物品i取值范围0~n-1
-   - 背包j取值范围0~n   容量从0开始填充，故总长度+1
+1. dp 定义：dp[i] [j]从前i个物品中任取，放入容量为j的背包的最大价值。
 2. 递推公式
 
 
@@ -699,7 +700,7 @@ class Solution:
 3. 初始化
 
    ```python
-   dp = [0] * (capacity + 1)  # 初始值为0，背包容量从0开始填充，故+1
+   dp = [0] * (capacity + 1)  # 初始值为0，背包容量从0开始，故+1
    dp[0] = 0  # 背包容量为0，最大价值为0
    ```
 
@@ -709,8 +710,8 @@ class Solution:
 
 ```python
 # ===========二维dp===========
-for i in range(1, n):  # 先物品  物品0已初始化,后续取值范围 1~n-1 
-    for j in range(capacity + 1):  # 后容量  取值范围0~n
+for i in range(1, n):  # 先物品  物品0已填充,后续取值范围1~n-1 
+    for j in range(capacity + 1):  # 后背包  取值范围 空背包0~满背包n
         if j >= weights[i]: 
           	dp[i][j] = max(dp[i-1][j], dp[i-1][j-weights[i]] + values[i])
         else: 
@@ -718,15 +719,15 @@ for i in range(1, n):  # 先物品  物品0已初始化,后续取值范围 1~n-1
      
     
 # ===========一维dp===========
-for i in range(n): # 物品
-    for j in range(capacity, weight[i]-1, -1):  # 背包倒序  取值范围背包容量~物品i重量
-      # 每次取得状态不会和之前重合，保证物品i只被放入一次。
-      dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
+for i in range(n): # 先物品
+    for j in range(capacity, 0, -1):  # 后背包 逆序
+      	if j>=weight[i]:
+             dp[j] = max(dp[j], dp[j - weight[i]] + value[i]) # 每次状态不会和之前重合，保证物品i只被放入一次。
 ```
 
 ##### 2. 背包是否刚好装满
 
-[分割等和子集](https://www.programmercarl.com/0416.%E5%88%86%E5%89%B2%E7%AD%89%E5%92%8C%E5%AD%90%E9%9B%86.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)   正好凑出sum/2    01背包 求组合 
+[分割等和子集](https://www.programmercarl.com/0416.%E5%88%86%E5%89%B2%E7%AD%89%E5%92%8C%E5%AD%90%E9%9B%86.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)   正好凑出sum/2    求组合 
 
 ```python
 total_sum = sum(nums)
@@ -738,7 +739,7 @@ dp = [False] * (target_sum + 1)
 dp[0] = True
 
 for num in nums: # 先物品
-    for i in range(target_sum, 0, -1): # 背包 逆序n~1
+    for i in range(target_sum, 0, -1): # 后背包 逆序
         # 判断背包容量是否装入物品
         if i>=num:
         		dp[i] = dp[i] or dp[i - num]
@@ -753,7 +754,6 @@ return dp[target_sum]
 ##### 1. 无限取的背包最大价值
 
 ```python
-# ===========一维dp===========
 dp = [0] * (bagWeight + 1)
 for i in range(len(weight)):  # 物品
     for j in range(weight[i], bagWeight + 1):  #背包容量  取值范围 物品i重量~背包容量
@@ -762,16 +762,22 @@ for i in range(len(weight)):  # 物品
 
 ##### 2. 求组合无序，例零钱兑换
 
-##### 3. 求排列有序，例爬楼梯有几种方法
+##### 3. 求排列有序，例 爬楼梯有几种方法
+
+ 爬楼梯进阶： n 阶台阶，每次爬m (1 <= m < n)，有多少种不同的方法？
 
 ​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
 
 ```python
-dp = [0]*(n+1) 
-dp[0] = 1
+# 递推公式  dp[j]依赖于dp[j-1]，dp[j-2]，dp[j-3]等，即dp[j-i]
+dp = [0]*(n+1) # 背包总容量
+dp[0] = 1 
 
-if j>=nums[i]: # 物品i能装入
-	dp[j] += dp[j - nums[i]]
+for j in range(1,n+1): # 先背包  
+    for i in range(1,m+1): # 后物品
+        if j>=i:
+            dp[j] += dp[j-i] # 这里i就是重量而非index
+return dp[n]
 ```
 
 ##### 4. 求背包装满最小物品数
