--- a/解题方法论.md
+++ b/解题方法论.md
@@ -508,27 +508,9 @@ return result
 
 - 如何模拟那些切割线？ 类似组合， startIndex代表切割线   
 - 终止条件？切完整个字符串,即**startIndex== len(s)**
-- 在递归循环中如何截取子串？s[startIndex: i+1]代表下标startIndex~i  刚切出来，左开右闭
-- 如何判断回文？ s==s[::-1]
+- 在递归循环中如何截取子串？s[ startIndex: i+1]代表下标startIndex~i  刚切出来，左闭右开
 
-```python
-# 131.分割回文串: 分割成子串，每个子串都是回文串
-result，path = [],[]  # 全局参数存结果
-def backtracking(s,startIndex):
-    # 终止条件
-    if startIndex == len(s):
-        result.append(path.copy()) # 切完说明整个字符串切成回文  必须复制
-        return
-    for i in range(startIndex, len(s)): # i取值0~n-1
-      	strr=s[startIndex:i+1]  # 切出来的子串
-        if strr == strr[::-1]: # 如果回文，才继续剩余部分的切分 
-            path.append(strr)
-            backtracking(s, i+1) # 纵向 从下一字符切割，判断其余是否仍为回文串
-            path.pop() # 回溯
-startIndex=0 # 切割线
-backtracking(s,startIndex)
-return result
-```
+见 高频题 分割回文串: 分割成子串，每个子串都是回文串
 
 [links](https://www.programmercarl.com/0131.%E5%88%86%E5%89%B2%E5%9B%9E%E6%96%87%E4%B8%B2.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
