--- a/高频题.md
+++ b/高频题.md
@@ -170,19 +170,19 @@ class Solution:
 ```python
 # 131.分割回文串: 分割成子串，每个子串都是回文串
 result，path = [],[]  # 全局参数存结果
-def backtracking(startIndex,s):
+def backtracking(s,startIndex):
     # 终止条件
     if startIndex == len(s):
-        result.append(path.copy()) # 必须复制  遍历到最后，说明整个字符串都被分为回文串。保存结果
+        result.append(path.copy()) # 切完说明整个字符串切成回文  必须复制
         return
     for i in range(startIndex, len(s)): # i取值0~n-1
-      	strr=s[startIndex:i+1]  # 刚切出来
+      	strr=s[startIndex:i+1]  # 切出来的子串
         if strr == strr[::-1]: # 如果回文，才继续剩余部分的切分 
             path.append(strr)
-            self.backtracking(s, i+1, path, result) # 纵向 从下一字符切割，判断其余是否仍为回文串
+            backtracking(s, i+1) # 纵向 从下一字符切割，判断其余是否仍为回文串
             path.pop() # 回溯
 startIndex=0 # 切割线
-backtracking(startIndex,s)
+backtracking(s,startIndex)
 return result
 ```
 
